# pulse

./: .gitignore  .signing-info  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  pulse.config.example.toml
.devcontainer/: README.md  devcontainer.json  setup.sh  verify.sh
.github/workflows/: release.yml
src/: config.rs  discord.rs  error.rs  lib.rs  main.rs  monitor.rs  types.rs
